# fleet-dispatch-optimization

./: README.md  pyproject.toml
examples/: small_example.py
src/fleet_dispatch/: __init__.py  cashflow.py  domain.py  model.py  network.py  solver.py
src/fleet_dispatch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_model.py  test_network.py
