[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-dispatch"
version = "0.1.0"
description = "Fleet dispatch optimization via time-space network flow"
requires-python = ">=3.11"
dependencies = [
    "pulp>=2.8",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
